[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/WinScreen001.png" type="Texture" id=1]
[ext_resource path="res://Art/Star001.png" type="Texture" id=2]
[ext_resource path="res://Art/GrayCircle001.png" type="Texture" id=3]
[ext_resource path="res://WinScreens/WinScreen001.gd" type="Script" id=4]
[ext_resource path="res://Art/NextLevel.png" type="Texture" id=5]
[ext_resource path="res://Art/RestartLevel.png" type="Texture" id=6]
[ext_resource path="res://Art/Background.png" type="Texture" id=7]

[node name="WinScreen001" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 249.0
margin_top = 37.0
margin_right = 775.0
margin_bottom = 563.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 526.0
margin_bottom = 526.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 262.0
margin_top = 109.0
margin_right = 762.0
margin_bottom = 491.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 198.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 500.0
margin_bottom = 278.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 126.0
margin_right = 374.0
margin_bottom = 76.0

[node name="Star1" type="TextureRect" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 76.0
texture = ExtResource( 2 )

[node name="Star2" type="TextureRect" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 76.0
texture = ExtResource( 2 )

[node name="Star3" type="TextureRect" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 76.0
texture = ExtResource( 2 )

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 282.0
margin_right = 500.0
margin_bottom = 382.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 160.0
margin_right = 340.0
margin_bottom = 100.0
custom_constants/margin_top = 20

[node name="HBoxContainer" type="GridContainer" parent="VBoxContainer/CenterContainer2/MarginContainer"]
margin_top = 20.0
margin_right = 180.0
margin_bottom = 100.0
custom_constants/hseparation = 20
columns = 2

[node name="Restart" type="TextureButton" parent="VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="NextLevel" type="TextureButton" parent="VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 180.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4
[connection signal="pressed" from="VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/MarginContainer/HBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
